tests/kyverno-policies/ingress-allowed-dns/resources.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paas-pass
  namespace: paas
spec:
  rules:
  - host: web.osc.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paas-pass-external
  namespace: paas
spec:
  rules:
  - host: web.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paas-fail
  namespace: paas
spec:
  rules:
  - host: foo.osc.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paas-fail-dne
  namespace: paas
spec:
  rules:
  - host: foo.osc.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skip
  namespace: webservice
spec:
  rules:
  - host: foo.osc.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
