tests/kyverno-policies/ingress-allowed-dns/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: ingress-allowed-dns
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: ingress-allowed-dns
    rule: allowed-dns
    resources:
      - paas-pass
      - paas-pass-external
      - paas-pass-wildcard
    kind: Ingress
    result: pass
  - policy: ingress-allowed-dns
    rule: allowed-dns
    resources:
      - skip
    kind: Ingress
    result: skip
  - policy: ingress-allowed-dns
    rule: allowed-dns
    resources:
      - paas-fail
      - paas-fail-dne
      - paas-fail-wildcard
    kind: Ingress
    result: fail
