tests/kyverno-policies/ingress-allowed-dns/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
policies:
- name: ingress-allowed-dns
  resources:
    - name: paas-pass
      values:
        allowed: 'web.osc.edu,bar.osc.edu'
    - name: paas-pass-external
      values:
        allowed: 'web.osc.edu,bar.osc.edu'
    - name: paas-fail
      values:
        allowed: 'web.osc.edu'
    - name: paas-fail-dne
      values:
        allowed: ''
    - name: skip
namespaceSelector:
  - name: webservice
  - name: paas
    labels:
      osc.edu/role: paas
